# advent_of_code_2023

./: .isort.cfg  Collision.ipynb  Day21.ipynb  Makefile  README.md  Twist.ipynb  mypy.ini  pyproject.toml
advent/: cli_utils.py  io_utils.py  logs.py
advent/day_01/: task_1.py  task_2.py
advent/day_02/: task_1.py  task_2.py
advent/day_03/: task_1.py  task_2.py
advent/day_04/: task_1.py  task_2.py
advent/day_05/: task_1.py  task_2.py  test_task2.py
advent/day_06/: task_1.py  task_2.py
advent/day_07/: task_1.py  task_2.py
advent/day_08/: task_1.py  task_2.py
advent/day_09/: task_1.py  task_2.py
advent/day_10/: task_1.py  task_2.py
advent/day_11/: task_1.py  task_2.py
advent/day_12/: task_1.py  task_2.py
advent/day_13/: task_1.py  task_2.py
advent/day_14/: task_1.py  task_2.py
advent/day_15/: task_1.py  task_2.py
advent/day_16/: task_1.py  task_2.py
advent/day_17/: task_1.py  task_2.py
advent/day_18/: task_1.py  task_2.py
advent/day_19/: task_1.py  task_2.py
advent/day_20/: task_1.py  task_2.py
advent/day_21/: task_1.py  task_2.py
advent/day_22/: task_1.py  task_2.py
advent/day_23/: task_1.py  task_2.py
advent/day_24/: task_1.py  task_2.py
advent/day_25/: task_1.py
