[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Tomasz Maćkowiak <kurazu@kurazu.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
more-itertools = "^9.0.0"
tqdm = "^4.64.1"
click = "^8.1.3"
matplotlib = "^3.6.2"
pydot = "^1.4.2"
returns = "^0.19.0"
opencv-python = "^4.8.1.78"
jupyter = "^1.0.0"
notebook = "^7.0.6"
shapely = "^2.0.2"
sympy = "^1.12"
torch = {version = "^2.1.2+cpu", source = "pytorch"}
contexttimer = "^0.3.3"
matplotlib-stubs = "^0.2.0"
networkx = "^3.2.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
ipdb = "^0.13.9"
pytest = "^7.2.0"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
